# Notepad

./: .gitignore  CMakeLists.txt  README.md
Notepad/: CMakeLists.txt  Notepad.pro  Resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
